GNOME Bugzilla – Bug 731209
error: redefinition of typedef 'GUPnPService'
Last modified: 2014-06-30 07:11:49 UTC
Compiling gupnp >= 0.20.11 on OpenBSD results in: gmake[3]: Entering directory '/usr/obj/ports/gupnp-0.20.12/gupnp-0.20.12/libgupnp' /usr/bin/libtool --tag=CC --mode=compile cc -DHAVE_CONFIG_H -I. -I.. -I/usr/local/include -pthread -I/usr/local/include/gssdp-1.0 -I/usr/local/include/libsoup-2.4 -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include -I/usr/local/include/libxml2 -I/usr/local/include/uuid -I.. -O2 -pipe -MT gupnp-context-manager.lo -MD -MP -MF .deps/gupnp-context-manager.Tpo -c -o gupnp-context-manager.lo gupnp-context-manager.c cc -DHAVE_CONFIG_H -I. -I.. -I/usr/local/include -pthread -I/usr/local/include/gssdp-1.0 -I/usr/local/include/libsoup-2.4 -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I/usr/local/include -I/usr/local/include/libxml2 -I/usr/local/include/uuid -I.. -O2 -pipe -MT gupnp-context-manager.lo -MD -MP -MF .deps/gupnp-context-manager.Tpo -c gupnp-context-manager.c -fPIC -DPIC -o .libs/gupnp-context-manager.o In file included from gupnp.h:28, from gupnp-context-manager.h:29, from gupnp.h:25, from gupnp-context-manager.c:47: gupnp-device.h:54: error: redefinition of typedef 'GUPnPDevice' gupnp-acl.h:71: error: previous declaration of 'GUPnPDevice' was here In file included from gupnp.h:33, from gupnp-context-manager.h:29, from gupnp.h:25, from gupnp-context-manager.c:47: gupnp-service.h:68: error: redefinition of typedef 'GUPnPService' gupnp-acl.h:72: error: previous declaration of 'GUPnPService' was here
Currently we've got these two patches in OpenBSD CVS: http://www.openbsd.org/cgi-bin/cvsweb/ports/net/gupnp/core/patches/patch-libgupnp_gupnp-device_h http://www.openbsd.org/cgi-bin/cvsweb/ports/net/gupnp/core/patches/patch-libgupnp_gupnp-service_h but that's more of a workaround than a real fix..
*** Bug 732075 has been marked as a duplicate of this bug. ***
Created attachment 279523 [details] [review] Avoid redefinition of GUPnPDevice and GUPnPService This was a C++11 feature. Signed-off-by: Jens Georg <mail@jensge.org>
Attachment 279523 [details] pushed as adaad1b - Avoid redefinition of GUPnPDevice and GUPnPService
Thanks, confirmed with GCC 4.2.1.