Avoid redefinition of GUPnPDevice and GUPnPService

This was a C++11 feature.

Signed-off-by: Jens Georg <mail@jensge.org>

https://bugzilla.gnome.org/show_bug.cgi?id=731209